package com.lld.problems.splitwise.code.constants;

public enum PaymentType {
    CASH,
    CHEQUE,
    CARD,
    UPI
}
